<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="qf.com.my_story.view.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:layout_height="@dimen/actionBar_height"
        android:background="?attr/colorPrimary"
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
       >
        <ImageView
            android:id="@+id/register_back"
            android:background="@drawable/fanhui"
            android:layout_width="@dimen/actionBar_widget_both"
            android:layout_height="@dimen/actionBar_widget_both" />
        <TextView
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:text="@string/register_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/register_headimg"
            android:layout_marginTop="10dp"
            android:background="@drawable/timg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_id"/>
        <EditText
            android:hint="大于2位且不能为纯数字"
            android:id="@+id/register_et1"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_name"/>
        <EditText
            android:id="@+id/register_et2"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd"/>
        <EditText

            android:id="@+id/register_et3"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:layout_height="@dimen/actionBar_height"
        android:background="?attr/colorPrimary"
        android:id="@+id/register_btn"
        android:text="@string/register_zc"
        android:textSize="18sp"
        android:layout_width="match_parent"
         />
</LinearLayout>
